--- a/pong-clientside/style.css
+++ b/pong-clientside/style.css
@@ -1,3 +1,32 @@
 body {
   margin: 0;
 }
+
+.score-board {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  margin: 1em 0;
+}
+.score-board p {
+  margin: 0;
+  line-height: 2;
+}
+.winner {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  color: pink;
+  font-size: 4em;
+
+}
+.show {
+  display: flex;
+}
