Changed colors and sizes

--- a/pong-clientside/style.css
+++ b/pong-clientside/style.css
@@ -1,8 +1,9 @@
 body {
   margin: 0;
+  overflow: hidden;
 }
 
-.score-board {
+/*.score-board {
   position: fixed;
   top: 0;
   width: 100%;
@@ -15,8 +16,8 @@ body {
 .score-board p {
   margin: 0;
   line-height: 2;
-}
-.winner, .start {
+}*/
+/*.winner, .start {
   position: fixed;
   height: 100%;
   width: 100%;
@@ -25,7 +26,12 @@ body {
   align-items: center;
   flex-direction: column;
   color: #fff;
+}*/
+
+canvas {
+  background-color: #1F1F1F;
 }
+
 .winner p {
   font-size: 30px;
 }
