Moved canvas to inside div to target it

--- a/pong-clientside/style.css
+++ b/pong-clientside/style.css
@@ -3,6 +3,13 @@ body {
   overflow: hidden;
 }
 
+.seperator {
+  left: 50%;
+  border: 2px solid #000000;
+  position: absolute;
+  height: 100vh;
+}
+
 /*.score-board {
   position: fixed;
   top: 0;
