--- a/pong-clientside/style.css
+++ b/pong-clientside/style.css
@@ -44,12 +44,12 @@ h2 {
   font-family: 'Bern Sans';
 }
 
-/*.seperator {
+.seperator {
   left: 50%;
   border: 2px solid #000000;
   position: absolute;
   height: 100vh;
-}*/
+}
 
 /*.score-board {
   position: fixed;
