--- a/pong-clientside/style.css
+++ b/pong-clientside/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Bern Sans';
-  src: url(../Bern-sans.otf);
+  src: url('Bern-sans.otf');
 }
 
 body {
@@ -69,7 +69,7 @@ h2 {
   position: fixed;
   height: 100%;
   width: 100%;
-  top: 0;
+  /*top: 0;*/
   display: none;
   justify-content: center;
   align-items: center;
