--- a/pong-clientside/style.css
+++ b/pong-clientside/style.css
@@ -9,13 +9,15 @@ body {
 }
 
 #canvas-wrap {
-  position:relative;
+  position: relative;
+  z-index: 3;
 }
 
 .overlay {
   width: 100%;
   height: 100vh;
-  position:absolute;
+  position: absolute;
+  z-index: 1;
 
   display: flex;
   align-items: center;
