--- a/pong-clientside/style.css
+++ b/pong-clientside/style.css
@@ -6,6 +6,7 @@
 body {
   margin: 0;
   overflow: hidden;
+  background-color: #1F1F1F;
 }
 
 #canvas-wrap {
@@ -14,6 +15,10 @@ body {
 }
 
 .overlay {
+  display: none;
+}
+
+/*.overlay {
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -21,6 +26,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+}*/
+
+.players {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  height: 100vh;
+  align-items: center;
 }
 
 .player-one-score h2{
@@ -74,10 +88,6 @@ h2 {
   color: #fff;
   z-index: 10;
 }
-
-/*canvas {
-  background-color: #1F1F1F;
-}*/
 
 .winner p {
   font-size: 30px;
